tests/src/frontend/typechecking/invalid/bind_dot4.sk
fun main(): void {
  ref: Ref<Int> = Ref(42);
  !ref.value = "hello";
  print_raw(ref.value)
}
